# open-jii

./: .dockerignore  .easignore  .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  .releaserc.js  .trivyignore  .trivyignore.docker-images  AGENTS.md  AMBYTE_UPLOAD_TODOS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PR.md  PR_660_LOGOUT_FIX.md  README.md  SECURITY.md  asyncapi.md  asyncapi.yaml  codecov.yml  debug_metadata.sql  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-db-users.sh  turbo.json  vitest.config.ts
.azure/: centrum-refactor-plan.md  phase1-checklist.md
.github/: PIPELINE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: build-aab.yml  build-and-push.yml  database-migrations.yml  deploy-backend.yml  deploy-backend_OLD.yml  deploy-databricks.yml  deploy-docs.yml  deploy-macro-runner.yml  deploy-macro-sandbox.yml  deploy-nextjs-opennext.yml  deploy.yml  deployment-template-refine.yml  deployment-template.yml  deployment-template_OLD.yml  dev-deploy.yml  dev-release.yml  dlt-full-refresh.yml  identify-affected.yml  label-prod-release-man.ymlual  linear-ref-check.yml  lint-pr.yml  main-coverage.yml  mobile-branch-apk.yml  mobile-preview-ota.yml  mobile-promote.yml  mobile-release.yml  pr.yml  prod-deploy.yml  production-checks.yml  production-release.yml  release.yml  rotate-grafana-token.yml  run-database-migrations.yml  submit-to-google-play.yml  test-deploy.yml  test_workflows.yml  tofu.yml  update_prod.yml
.specify/memory/: constitution.md
apps/backend/: .env.example  .env.test  .releaserc.js  Dockerfile  README.md  docker-compose.yml  eslint.config.js  jest.config.js  package.json  tsconfig.build.json  tsconfig.json  vitest.config.mts
apps/data/: .dockerignore  .gitignore  Dockerfile.test  README.md  conftest.py  databricks.yml  package.json  pyproject.toml  requirements.txt
apps/data/src/lib/ambyte/: pyproject.toml  setup.py
apps/data/src/lib/ambyte/ambyte/: __init__.py  ambyte_parsing.py  volume_io.py
apps/data/src/lib/ambyte/tests/: conftest.py  test_ambyte_parsing.py  test_volume_io.py
apps/data/src/lib/data_repair/: README.md  pyproject.toml  setup.py
apps/data/src/lib/data_repair/data_repair/: __init__.py  manifest.py
apps/data/src/lib/data_repair/data_repair/examples/: __init__.py  _example_clamp_invalid.py  _example_combined_forward_and_retroactive.py  _example_nested_variant_inverse.py  _example_overlay_corrections.py  _example_simple_field_correction.py
apps/data/src/lib/data_repair/data_repair/repairs/: _2026_04_rides_inplace.py  _2026_04_rides_inplace.sql  __init__.py
apps/data/src/lib/enrich/: pyproject.toml  setup.py
apps/data/src/lib/enrich/enrich/: __init__.py  annotations_metadata.py  backend_client.py  custom_metadata.py  device_metadata.py  experiment_metadata.py  macro_execution.py  question_metadata.py  transfer_metadata.py  user_metadata.py
apps/data/src/lib/enrich/tests/: conftest.py  test_annotations_metadata.py  test_backend_client.py  test_question_metadata.py  test_user_metadata.py
apps/data/src/lib/exports/: setup.py
apps/data/src/lib/exports/exports/: __init__.py  xlsx.py
apps/data/src/lib/multispeq/multispeq/: core.py
apps/data/src/lib/multispeq/multispeq/executors/: js_executor.py  macro_error.md  py_executor.py  r_executor.py
apps/data/src/lib/multispeq/multispeq/helpers/: helpers.py
apps/data/src/lib/multispeq/tests/: conftest.py  test_core.py
apps/data/src/lib/multispeq/tests/executors/: test_js_executor.py  test_py_executor.py  test_r_executor.py
apps/data/src/lib/openjii/: pyproject.toml  setup.py
apps/data/src/lib/openjii/openjii/: __init__.py  _config.py  compression.py  helpers.py
apps/data/src/lib/openjii/openjii/centrum/: __init__.py  constants.py  runtime.py  schemas.py
apps/data/src/lib/openjii/tests/: conftest.py  test_openjii_helpers.py
apps/data/src/notebooks/data_hackathon_2026/: TEMPLATE_Analysis_Notebook.py  Welcome_to_openJII_Data_Hackathon_2026.py
apps/data/src/pipelines/: centrum_pipeline.py  experiment_pipeline.py  photosynq_project_import_wip_pipeline.py
apps/data/src/pipelines/centrum/: hooks.py
apps/data/src/pipelines/centrum/bronze/: raw_data.py  raw_imported_data.py  raw_large_data.py  raw_uploaded_data.py
apps/data/src/pipelines/centrum/enriched/: enriched_experiment_macro_data.py  enriched_experiment_raw_data.py  enriched_experiment_uploaded_data.py
apps/data/src/pipelines/centrum/gold/: experiment_contributors.py  experiment_device_data.py  experiment_devices.py  experiment_macro_data.py  experiment_raw_data.py  experiment_status.py  experiment_table_metadata.py  experiment_uploaded_data.py  sources.py
apps/data/src/pipelines/centrum/silver/: clean_data.py
apps/data/src/tasks/: ambyte_processing_task.py  centrum_backup_task.py  data_export_task.py  data_upload_task.py  enriched_tables_refresh_task.py  experiment_pipeline_create_task.py  experiment_pipelines_orchestrator_task.py  experiment_status_update_task.py  project_transfer_task.py
apps/data/tests/: conftest.py  test_xlsx.py  test_xlsx_integration.py
apps/data/tests/lib/: test_backend_client.py  test_centrum_constants.py  test_compression.py  test_helpers_catalog.py  test_macro_execution.py  test_question_metadata.py  test_repair_manifest.py  test_rides_repair.py  test_volume_io.py
apps/docs/: .gitignore  .releaserc.js  README.md  ROLLBACK.md  docusaurus.config.ts  eslint.config.js  mdx-components.tsx  (+5 more)
docs/: IMPLEMENTATION_SUMMARY.md  RELEASES.md  SETUP_RELEASES.md  environment-variables.md  ojd-1565-dynamic-scan-timeout-proposal.md
infrastructure/: README.md  backend.tf  provider.tf  providers.tf  variables.tf  versions.tf
node-jiti/: tailwind-base.ts.a8a12de8.js  tailwind-web.ts.8112ef7a.js  web-tailwind.config.ts.040a8787.js
patches/: @better-auth__expo.patch  @better-auth__expo@1.5.6.patch  @better-auth__expo@1.6.11.patch  @better-auth__expo@1.6.19.patch  @better-auth__expo@1.6.23.patch  react-native-usb-serialport-for-android.patch
(+5666 files in other folders)
