[tool.poetry]
name = "openjii-data"
version = "0.1.0"
description = "Databricks notebooks and Python packages for OpenJII"
authors = ["openJII Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
requests = "^2.31.0"
multispeq = { path = "src/lib/multispeq", develop = true }
ambyte = { path = "src/lib/ambyte", develop = true }
enrich = { path = "src/lib/enrich", develop = true }
openjii = { path = "src/lib/openjii", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.0"
build = "^1.0.0"
wheel = "^0.42.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
"src/lib/multispeq/tests",
"src/lib/ambyte/tests",
"src/lib/enrich/tests",
"src/lib/openjii/tests"
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
filterwarnings = [
    "ignore:urllib3 v2 only supports OpenSSL:urllib3.exceptions.NotOpenSSLWarning",
    "ignore:string or file could not be read to its end:DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/lib"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/dist/*",
    "*/build/*",
    "*/*.egg-info/*",
    "*/setup.py",
    "*/helpers/helpers.py",
    "*/helpers/helpers.js",
    "*/helpers/helpers.r",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.coverage.lcov]
output = "coverage/lcov.info"
