[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_repair"
version = "0.1.0"
description = "Reusable data repair / overlay framework for openJII Databricks pipelines"
authors = [{ name = "openJII Team" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["data_repair"]
