[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enrich"
version = "0.1.0"
description = "Data enrichment utilities for openJII Databricks pipelines"
authors = [{ name = "openJII Team" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["enrich"]
