[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openjii"
version = "0.1.0"
description = "OpenJII data analysis helpers for Databricks"
authors = [{ name = "openJII Team" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["openjii"]
